# MatrixDebugBoard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
OTA_Server/: README.md  config.json  server.py
components/can_twai/: CMakeLists.txt
components/can_twai/include/: can_twai.h
components/can_twai/src/: can_twai.c
components/dashboard/: CMakeLists.txt
components/dashboard/include/: dashboard.h  http_server.h  ws_server.h
components/dashboard/src/: dashboard.c  http_server.c  web_assets.c  ws_server.c
components/dashboard/web/: app.js  index.html  style.css
components/dashboard/web/modules/: ai.html  can.html  flash.html  ota.html  rs485.html  system.html  uart.html
components/ota_manager/: CMakeLists.txt
components/ota_manager/include/: ota_manager.h
components/ota_manager/src/: ota_manager.c
components/spi_flash_ext/: CMakeLists.txt
components/spi_flash_ext/include/: spi_flash_ext.h
components/spi_flash_ext/src/: spi_flash_ext.c
components/uart_485/: CMakeLists.txt
components/uart_485/include/: uart_485.h
components/uart_485/src/: uart_485.c
components/uart_debug/: CMakeLists.txt
components/uart_debug/include/: uart_debug.h
components/uart_debug/src/: uart_debug.c
components/wifi_module/: CMakeLists.txt
components/wifi_module/include/: wifi_manager.h  wifi_module.h  wifi_storage.h
components/wifi_module/src/: wifi_manager.c  wifi_module.c  wifi_storage.c
docs/: README.md
hardware/: PCB1.pcbdoc
hardware/Schematic1/: P1.schdoc
main/: CMakeLists.txt  main.c
tools/: README.md
(+1 files in other folders)
